fix padding on mobile screens

--- a/src/app/private/private.component.css
+++ b/src/app/private/private.component.css
@@ -3,7 +3,7 @@
     width: 100vw !important;
     height: 100vh !important;
     margin-top: 0 !important;
-    padding-top: 6vh !important;
+    padding-top: 55px !important;
   }
 }
 
